Update the time

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <p class="current-temp" id="current-celcius"></p> <img class="degree" id="degree-celcius" src="images/degreec.png" alt="degree" width=50px>
         </div>
         <div class="col-6">
-          <p class="time-date" id="current-date">Sat, 24 April</p>
+          <p class="time-date" id="current-date"></p>
           <br />
           <p class="prepare" id="description"></p>
           <br />
