--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
       <div class="row">
         <div class="col-6">
-          <img src="images/smileysun-01.png" alt="sunny" width=230px>
+          <img src="images/smileysun-01.png" alt="sunny" id="icon" width=230px>
           <p class="current-temp" id="current-celcius"></p> <img class="degree" id="degree-celcius" src="images/degreec.png" alt="degree" width=50px>
         </div>
         <div class="col-6">
@@ -50,7 +50,7 @@
           <br />
           <p class="details">HUMIDITY<br /><span class="numbers" id="humid"></span><span class="measurements">%</span></p>
           <br>
-          <p class="details">WIND<br /><span class="numbers" id="wind"></span><span class="measurements">km/h</span></p>
+          <p class="details">WIND<br /><span class="numbers" id="wind"></span><span class="measurements"> km/h</span></p>
           <br>
         </div>  
         </div>
