Updated class names and css

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
           <br />
           <p class="prepare" id="description"></p>
           <br />
-          <p class="details">HUMIDITY<br /><span class="numbers" id="humid"></span><span class="measurements">%</span></p>
+          <p class="details-humid">HUMIDITY<br /><span class="numbers" id="humid"></span><span class="measurements">%</span></p>
           <br>
-          <p class="details">WIND<br /><span class="numbers" id="wind"></span><span class="measurements"> km/h</span></p>
+          <p class="details-wind">WIND<br /><span class="numbers" id="wind"></span><span class="measurements"> km/h</span></p>
           <br>
         </div>  
         </div>
