--- a/index.html
+++ b/index.html
@@ -54,72 +54,7 @@
           <br>
         </div>  
         </div>
-        <div class="row forecast-week">
-            <div class="col-2">
-                <p class="forecast-day">
-                    Sun <br />
-                    <img class="weather" src="images/bolt.png" alt="bolt" width=40px>
-                    <br />
-                    <div class="high-temp">
-                        8°
-                    </div>
-                    <div class="low-temp">
-                        2°
-                    </div>
-                </p>
-            </div>
-            <div class="col-2">
-                <p class="forecast-day">
-                    Mon <br />
-                    <img class="weather" src="images/partcloud.png" alt="partly-cloudy" width=40px>
-                    <br />
-                    <div class="high-temp">
-                        17°
-                    </div>
-                    <div class="low-temp">
-                        11°
-                    </div>
-                </p>
-            </div>
-            <div class="col-2">
-                <p class="forecast-day">
-                    Tues <br />
-                    <img class="weather" src="images/windy.png" alt="windy" width=40px>
-                    <br />
-                    <div class="high-temp">
-                        13°
-                    </div>
-                    <div class="low-temp">
-                        9°
-                    </div>
-                </p>
-            </div>
-             <div class="col-2">
-                <p class="forecast-day">
-                    Wed <br />
-                    <img class="weather" src="images/cloud.png" alt="rainy" width=40px>
-                    <br />
-                    <div class="high-temp">
-                        7°
-                    </div>
-                    <div class="low-temp">
-                        4°
-                    </div>
-                </p>
-            </div>
-            <div class="col-2">
-                <p class="forecast-day">
-                    Thurs <br />
-                    <img class="weather" src="images/smileysun-01.png" alt="sunny" width=40px>
-                    <br />
-                    <div class="high-temp">
-                        10°
-                    </div>
-                    <div class="low-temp">
-                        11°
-                    </div>
-                </p>
-            </div>
+        <div class="forecast-week" id="forecast">
         </div>
         <div class="fahrenheit">
           <span id="love">
