Added unit conversion to forecast and wind speed

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <br />
           <p class="details-humid">HUMIDITY<br /><span class="numbers" id="humid"></span><span class="measurements">%</span></p>
           <br>
-          <p class="details-wind">WIND<br /><span class="numbers" id="wind"></span><span class="measurements"> km/h</span></p>
+          <p class="details-wind">WIND<br /><span class="numbers" id="wind"></span><span class="measurements"id="speedUnit"> km/h</span></p>
           <br>
         </div>  
         </div>
